<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="UnwindCmd_Typ" Id="{f00549d1-2b35-42df-97ed-155f8899630d}">
    <Declaration><![CDATA[TYPE UnwindCmd_Typ :
STRUCT
	JogFwd:BOOL;
	JogBack:BOOL;
	JogSFwdSlow:BOOL;
	JogBackdSlow:BOOL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>