<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="IO_In_Typ" Id="{d9092035-590a-4ea9-8869-60aa4efc0d42}">
    <Declaration><![CDATA[TYPE IO_In_Typ :
STRUCT
	PrimeryPressFeedback :fb_io_in_bool;
	SeconderyPressFeedbak:fb_io_in_bool;
	E_StopPressed  	: BOOL;
	E_StopPressedRaw AT %I* 	: BOOL;
	
	UW_1_Diameter AT %I* 	: INT;
	UW_2_Diameter AT %I* 	: INT;
	UW_1_LoacCell AT %I* 	: DINT;
	UW_2_LoacCell AT %I* 	: DINT;	
	
	UW_1_DancerFull  	: BOOL;
	UW_2_DancerFull  	: BOOL;
	
	UW_1_DancerFullRaw AT %I* 	: BOOL;
	UW_2_DancerFullRaw AT %I* 	: BOOL;	
	
	UW_1_DancerPosition AT %I* 	: INT;
	UW_2_DancerPosition AT %I* 	: INT;

	HomeOutAxis	 AT %I* 	: BOOL;
	HomeOutAxisLimit	 AT %I* 	: BOOL;
	
	GripperStartPosition	 AT %I* 	: BOOL;
	GripperEndPosition	 AT %I* 	: BOOL;
	
	UW_1_DancerEmpetyRaw AT %I* 	: BOOL;
	UW_2_DancerEmpetyRaw AT %I* 	: BOOL;
	
	UW_1_DancerEmpety AT %I* 	: BOOL;
	UW_2_DancerEmpety AT %I* 	: BOOL;	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>