<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="MultiAxis_CMD_typ" Id="{958d8837-e253-0bfe-0e14-425f56e4da34}">
    <Declaration><![CDATA[TYPE MultiAxis_CMD_typ :
	STRUCT		
		CamTableSelect		: CamTableSelectCMD_typ ;
		CamIn				: CamIn_CMD_typ ;
		GearInDyn			: GearInDyn_CMD_typ ;
		GearInPos			: GearInPos_CMD_typ ;
		GearInMultiMaster 	: GearInMultiMaster_CMD_typ ;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>