<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Dimeter_Typ" Id="{ac1e5ab1-6355-4050-99d1-623f9bf6fc7c}">
    <Declaration><![CDATA[TYPE Dimeter_Typ :
STRUCT
	
	stLutDataParam:	ST_LookUpTableParam;
	Diameter_Unfiltred	:LREAL;
	DiameterLPF:			FB_LPF;
	Diameter_filtred	:LREAL;
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>