<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_DancerCtrlTyp" Id="{6d69fdb9-cb8a-445e-ac7f-9b5f3f580fff}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
//{attribute 'strict'}
TYPE E_DancerCtrlTyp :
(
	DIGITAL := 0,
	ANALOG	:=10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>