<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="AxesList" Id="{a1d1e217-019b-0169-2c97-d10adf46ef42}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	gWebAxes:		WebAxes_typ;	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>