<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="E_LutMode" Id="{ff1050af-60c8-0329-0acf-9a24d5c854b1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_LutMode :
(
	eDisabled:= 0,
	ePhisicalToAnalog:= 1,
	eAnalogToPhisical:= 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>