<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_LookUpTableParam" Id="{da5d6d81-dabe-02dd-2d2c-54e03cf92ed7}">
    <Declaration><![CDATA[TYPE ST_LookUpTableParam	 :
STRUCT
	arrPhisical:	ARRAY[0..40] OF LREAL;
	arrAnalog:		ARRAY[0..40] OF LINT;
	eLutMode:		E_LutMode;			
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>